--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a tinder for developers",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev" : "node ./src/app.js",
+    "start" : "nodemon ./src/app.js"
   },
   "keywords": [
     "javascript",
