--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongodb": "^6.21.0"
+    "mongodb": "^6.21.0",
+    "mongoose": "^8.21.0"
   }
 }
