--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongodb": "^6.21.0",
-    "mongoose": "^8.21.0"
+    "mongoose": "^8.21.0",
+    "validator": "^13.15.26"
   }
 }
