--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Nitesh Kushwaha",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongodb": "^6.21.0",
